--- a/index.html
+++ b/index.html
@@ -9,33 +9,43 @@
   />
   <style>
     body {
-      background-color: rgb(159, 196, 252);
+      background-color: rgb(164, 252, 159);
       font-family: "Ysabeau SC", sans-serif;
     }
     
     h1 {
       text-align: center;
-      background-color: aqua;
+      background-color: rgb(242, 141, 83);
       font-size: 50px;
     }
 
     .container {
-      margin-left: 375px;
+      margin-left: 450px;
       font-size: larger;
     }
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 20%;
+    }
+
+   
   </style>
 
   <body>
     <h1>Milanpreet Singh</h1>
+   <img src="IMG_0961.jpg" alt="my image" class="center"/>
     <dl class="container">
+      <br>
       <dt>Student number</dt>
-      <dd>- 90541115618</dd>
+      <dd>-90541115618</dd>
       <dt>Program Name</dt>
-      <dd>- Interactive Media Design</dd>
+      <dd>-Interactive Media Design</dd>
       <dt>Course code and name</dt>
-      <dd>- MTM6201 Web Developing II</dd>
+      <dd>-MTM6201 Web Developing II</dd>
       <dt>An Interesting fact about me</dt>
-      <dd>- "Sharing a fact about yourself in an introduction is a great way to make the experience unique."</dd>
+      <dd>"Sharing a fact about yourself in an introduction is a great way to make the experience unique."</dd>
     </dl>
   </body>
 </html>
